fix order page clipping

--- a/src/assets/pages/OrderPage/OrderPage.module.scss
+++ b/src/assets/pages/OrderPage/OrderPage.module.scss
@@ -3,6 +3,7 @@
 .page {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   display: grid;
   grid-template-rows: var(--header-height) 1fr;
   font-size: 20px;
